# red-black-knights

./: .gitignore  CMakeLists.txt  LICENSE  README.md
outputs/: README.md
scripts/: generate_n_knights_images.ps1
src/: dominance_knights.cpp  main.cpp  n_knights.cpp
